--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -15,14 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build Docker Image
-        uses: noble-assets/heighliner-build-action@d409c7b0dc2acc05a8218caad581bffae654c953
+        uses: strangelove-ventures/heighliner-build-action@v1.0.2
         with:
           registry: "" # empty registry, image only shared for e2e testing
           tag: local # emulate local environment for consistency in interchaintest cases
           tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
           platform: linux/amd64 # test runner architecture only
           git-ref: ${{ github.head_ref }} # source code ref
-          clone-key: ${{ secrets.AURA_SSH_KEY }}
 
           # Heighliner chains.yaml config
           chain: noble
