feat: integrate aura (#383)
Co-authored-by: Dan Kanefsky <dan@nobleassets.xyz>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -11,10 +11,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-docker:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build Docker image
+      - name: Build Docker Image
         uses: strangelove-ventures/heighliner-build-action@v1.0.2
         with:
           registry: "" # empty registry, image only shared for e2e testing
@@ -36,45 +36,45 @@ jobs:
           name: noble-docker-image
           path: ${{ env.TAR_PATH }}
 
-  prepare-e2e-tests:
+  prepare:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Go 1.21
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: '>=1.21'
+          go-version: '1.21'
 
-      - name: Generate matrix
+      - name: Generate Matrix
         id: set-matrix
         run: |
           # Run the command and convert its output to a JSON array
           TESTS=$(cd interchaintest && go test -list . | grep -v "^ok " | jq -R -s -c 'split("\n")[:-1]')
           echo "matrix=${TESTS}" >> $GITHUB_OUTPUT
-  
-  e2e-tests:
+
+  test:
     needs:
-      - build-docker
-      - prepare-e2e-tests
+      - build
+      - prepare
     runs-on: ubuntu-latest
     strategy:
       matrix:
         # names of `make` commands to run tests
-        test: ${{fromJson(needs.prepare-e2e-tests.outputs.matrix)}}
+        test: ${{fromJson(needs.prepare.outputs.matrix)}}
       fail-fast: false
 
     steps:
-      - name: Set up Go 1.21
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: '>=1.21'
-
-      - name: checkout chain
-        uses: actions/checkout@v4
+          go-version: '1.21'
 
       - name: Download Tarball Artifact
         uses: actions/download-artifact@v4
@@ -84,5 +84,5 @@ jobs:
       - name: Load Docker Image
         run: docker image load -i ${{ env.TAR_PATH }}
 
-      - name: run test
+      - name: Run Tests
         run: cd interchaintest && go test -race -v -timeout 30m -run ^${{ matrix.test }}$ .
