--- a/app.yaml
+++ b/app.yaml
@@ -6,7 +6,7 @@ modules:
       pre_blockers: [ upgrade ]
       begin_blockers: [ capability, authority, slashing, evidence, staking, ibc, authz ]
       end_blockers: [ crisis, staking, feegrant, forwarding ]
-      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority ]
+      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority ]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
@@ -117,4 +117,8 @@ modules:
   - name: forwarding
     config:
       "@type": noble.forwarding.module.v1.Module
+      authority: authority # Utilize our custom x/authority module.
+  - name: globalfee
+    config:
+      "@type": noble.globalfee.module.v1.Module
       authority: authority # Utilize our custom x/authority module.
