--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -54,6 +54,11 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.FIAT_TF_PRIV_DPLY }}
+
       - name: Generate Matrix
         id: set-matrix
         run: |
@@ -88,6 +93,11 @@ jobs:
 
       - name: Load Docker Image
         run: docker image load -i ${{ env.TAR_PATH }}
+
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.FIAT_TF_PRIV_DPLY }}
 
       - name: Run Tests
         run: cd e2e && go test -race -v -timeout 30m -run ^${{ matrix.test }}$ .
