--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -27,7 +27,7 @@ jobs:
           tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
           platform: linux/amd64 # test runner architecture only
           clone-key: ${{ secrets.FIAT_TF_PRIV_DPLY }}
-          git-ref: ${{ github.head_ref }} # source code ref          
+          additional-args: --git-ref ${{ github.head_ref }}   
 
           # Heighliner chains.yaml config
           chain: noble
