--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -21,6 +21,7 @@ jobs:
           tag: local # emulate local environment for consistency in interchaintest cases
           tar-export-path: ${{ env.TAR_PATH }} # export a tarball that can be uploaded as an artifact for the e2e jobs
           platform: linux/amd64 # test runner architecture only
+          git-ref: ${{ github.head_ref }} # source code ref
           clone-key: ${{ secrets.NOBLE_DOLLAR_DEPLOY}}
 
           # Heighliner chains.yaml config
