--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - '**'
+    paths:
+      - 'app/**'
+      - 'cmd/**'
+      - 'x/**'
+      - 'Dockerfile'
+      - 'go.mod'
+      - 'go.sum'
 
 env:
   REGISTRY: ghcr.io
@@ -20,6 +27,16 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
+      - name: Extract metadata (tags, labels)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=sha,format=long
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -35,3 +52,5 @@ jobs:
           build-target: make install
           binaries: |
             - /go/bin/nobled
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
