chore: bump `swap v1.0.0-alpha.0`

--- a/app.yaml
+++ b/app.yaml
@@ -131,7 +131,7 @@ modules:
       authority: authority # Utilize our custom x/authority module.
   - name: swap
     config:
-      "@type": swap.module.v1.Module
+      "@type": noble.swap.module.v1.Module
       authority: authority # Utilize our custom x/authority module.
       base_denom: uusdn
       stableswap:
