fix: add missing `dollar/yield` module `minter` permissions

--- a/app.yaml
+++ b/app.yaml
@@ -36,6 +36,8 @@ modules:
           permissions: [ burner, minter ]
         - account: dollar
           permissions: [ burner, minter ]
+        - account: dollar/yield
+          permissions: [ minter ]
       authority: authority # Utilize our custom x/authority module.
   - name: authz
     config:
