--- a/.github/license.yml
+++ b/.github/license.yml
@@ -1,4 +1,6 @@
 header: |
+  // SPDX-License-Identifier: Apache-2.0
+  //
   // Copyright 2025 NASD Inc. All Rights Reserved.
   //
   // Licensed under the Apache License, Version 2.0 (the "License");
