chore: bump deps

--- a/.github/workflows/draft-release.yaml
+++ b/.github/workflows/draft-release.yaml
@@ -46,8 +46,8 @@ jobs:
           docker create -it --entrypoint sh --name arm --platform linux/arm64 ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
           docker cp amd:/bin/nobled ./nobled_linux-amd64
           docker cp arm:/bin/nobled ./nobled_linux-arm64
-          sha256sum ./nobled_linux-amd64 > ./nobled_sha256.txt
-          sha256sum ./nobled_linux-arm64 >> ./nobled_sha256.txt
+          sha256sum ./nobled_linux-amd64 > ./checksum.txt
+          sha256sum ./nobled_linux-arm64 >> ./checksum.txt
 
       - name: Draft Release
         uses: softprops/action-gh-release@v2
@@ -56,4 +56,4 @@ jobs:
           files: |
             nobled_linux-amd64
             nobled_linux-arm64
-            nobled_sha256.txt
+            checksum.txt
