feat: integrate swagger into api endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-vue/node_modules
-vue/dist
-release/
-.idea/
-.vscode/
-.DS_Store
-play_sh/
-/heighliner*
-bin/
-build/
-.duke/
+.duke
+.idea
+.vscode
+api/proto
+api/tmp-swagger-gen
+build
 go.work
 go.work.sum
