chore: bump swap module to latest commit

--- a/app.yaml
+++ b/app.yaml
@@ -135,7 +135,8 @@ modules:
       "@type": noble.swap.module.v1.Module
       authority: authority # Utilize our custom x/authority module.
       base_denom: uusdn
-      base_minimum_deposit: 1000000
+      base_minimum_deposit: 1e6
+      max_add_liquidity_slippage_percentage: 0.5e4
       stableswap:
         unbonding_block_delta: 30
   - name: wormhole
