chore: bump dollar to latest tag

--- a/app.yaml
+++ b/app.yaml
@@ -122,6 +122,8 @@ modules:
       "@type": noble.dollar.module.v1.Module
       authority: authority # Utilize our custom x/authority module.
       denom: uusdn
+      vaults_minimum_lock: 1e6
+      vaults_minimum_unlock: 1e6
   - name: forwarding
     config:
       "@type": noble.forwarding.module.v1.Module
