--- a/app.yaml
+++ b/app.yaml
@@ -6,7 +6,7 @@ modules:
       pre_blockers: [ upgrade ]
       begin_blockers: [ capability, authority, slashing, evidence, staking, ibc, authz, swap ]
       end_blockers: [ crisis, staking, feegrant, forwarding ]
-      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority, wormhole, dollar, swap ]
+      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane ]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
@@ -106,6 +106,12 @@ modules:
       "@type": halo.module.v1.Module
       denom: uusyc
       underlying: uusdc
+
+  # Hyperlane Modules
+  - name: hyperlane
+    config:
+      "@type": hyperlane.core.module.v1.Module
+      authority: authority # Utilize our custom x/authority module.
   
   # Monerium Modules
   - name: florin
