--- a/api/config.json
+++ b/api/config.json
@@ -50,7 +50,7 @@
       "name": "Hyperlane",
       "tags": [
         "Hyperlane",
-        "Hyperlane Warp"
+        "Warp"
       ]
     },
     {
