--- a/app.yaml
+++ b/app.yaml
@@ -37,8 +37,8 @@ modules:
         - account: dollar
           permissions: [ burner, minter ]
         - account: dollar/yield
+        - account: hyperlane
         - account: warp
-          permissions: [ burner, minter ]
       authority: authority # Utilize our custom x/authority module.
   - name: authz
     config:
