--- a/app.yaml
+++ b/app.yaml
@@ -5,8 +5,8 @@ modules:
       app_name: Noble
       pre_blockers: [ upgrade ]
       begin_blockers: [ capability, authority, slashing, evidence, staking, ibc, authz, swap ]
-      end_blockers: [ crisis, staking, feegrant, forwarding ]
-      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp ]
+      end_blockers: [ crisis, staking, feegrant, forwarding, autocctp ]
+      init_genesis: [ capability, transfer, auth, bank, staking, slashing, crisis, fiat-tokenfactory, globalfee, genutil, ibc, interchainaccounts, packetfowardmiddleware, evidence, authz, feegrant, params, upgrade, vesting, cctp, forwarding, autocctp aura, halo, florin, authority, wormhole, dollar, swap, hyperlane, warp ]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
@@ -143,6 +143,9 @@ modules:
     config:
       "@type": noble.forwarding.module.v1.Module
       authority: authority # Utilize our custom x/authority module.
+  - name: autocctp
+    config:
+      "@type": noble.autocctp.module.v1.Module
   - name: globalfee
     config:
       "@type": noble.globalfee.module.v1.Module
